# SimpleEngine

./: .gitmodules  CMakeLists.txt  README.md
Engine/: CMakeLists.txt  main.cpp
Engine/Game/: .Game.cpp.swp  Game.cpp  Game.hpp  Menu.hpp
Engine/Object/: Meteorite.cpp  Meteorite.hpp  Object.cpp  Object.hpp  Player.cpp  Player.hpp  Star.cpp  Star.hpp  StaticObject.cpp  StaticObject.hpp
Engine/PhysicsEngine/: Mass.cpp  Mass.hpp
Engine/RendererEngine/: AnimatedSprite.cpp  AnimatedSprite.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Sprite.cpp  Sprite.hpp  Texture2D.cpp  Texture2D.hpp  VAO.cpp  VAO.hpp
Engine/Window/: Window.cpp  Window.hpp
resources/GLSL/: shader.frag  shader.vert
